--- a/src/partials/country.hbs
+++ b/src/partials/country.hbs
@@ -1,7 +1,6 @@
-<div class="container">
-    <div class="country">
+<h2 class="country__title">{{name}}</h2>
+    <div class="country__container">
         <div class="country__info">
-            <h2 class="country__title">{{name}}</h2>
             <p class="country__capital"><b>Capital: </b>{{capital}}</p>
             <p class="country__population"><b>Population: </b>{{population}}</p>
             <p class="country__languages"><b>Languages: </b></p>
@@ -13,4 +12,3 @@
         </div>
         <div class="country__picture"><img src="{{flags.png}}" alt="{{name}}"></div>
     </div>
-</div>
