--- a/src/partials/countryList.hbs
+++ b/src/partials/countryList.hbs
@@ -1,8 +1,5 @@
-<div class="container">
-    <div class="country-list">
+        <ul class="country__list">
             {{#each []}}
-            <li class="country-list__item">{{this.name}}</li>
+            <li class="country__list-item">{{this.name}}</li>
             {{/each}}
         </ul>
-    </div>
-</div>
