--- a/src/sass/_input.scss
+++ b/src/sass/_input.scss
@@ -1,3 +1,29 @@
-/* #input {
-  margin: 15px;
-} */
+#input {
+  width: 50%;
+  border: 2px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 12px 16px;
+
+  font-style: bolt;
+  font-weight: bolt;
+
+  resize: none;
+  transition: border-color var(--time) var(--timing-function);
+
+  &::placeholder {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+  }
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+    fill: var(--accent-color);
+  }
+}
