--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,49 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --time: 250ms;
+  --accent-color: #2196f3;
+  --hover-focus-color: #188ce8;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+.link {
+  text-decoration: none;
+}
+.list {
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+.container {
+  margin-left: 15px;
+  margin-right: 15px;
+}
 // Стили для файла с примером HTML-фрагмента
-@import './example';
 @import './input';
 @import './country';
